[project]
name = "bitlog"
version = "0.1.0"
description = "A Django-based blogging platform."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.10.0",
    "django>=5.2.8",
    "markdown>=3.10",
    "pillow>=12.0.0",
    "python-decouple>=3.8",
    "sqlparse>=0.5.3",
    "tzdata>=2025.2",
]
